kyanite-core/snapshots/kyanite__parse__tests__nested.snap
---
source: kyanite-core/src/parse.rs
expression: parser.errors
---
- filename: test-cases/parser/nested.kya
  heading: unexpected defn
  source: "    println(defn);"
  span:
    line: 2
    column: 13
    length: 4
  text: "expected one of `identifier`, `literal`, `(` here"
- filename: test-cases/parser/nested.kya
  heading: expected ; but found identifier
  source: "    println(x)"
  span:
    line: 6
    column: 5
    length: 7
  text: expected ; here

